# go-topo

./: .gitignore  CMakeLists.txt  README  assembly.go  comp_solid.hh  compound.go  compound.hh  compsolid.go  dxf.go  dxf_test.go  edge.cc  edge.go  edge.hh  face.cc  face.go  face.hh  geometry.go  geometry_c_api.cc  geometry_c_api.h  geometry_creator.cc  geometry_creator.go  geometry_creator.hh  geometry_impl.hh  geometry_object.cc  geometry_object.hh  go.mod  go.sum  ifc.cc  ifc.go  ifc.hh  ifc_c_api.cc  ifc_c_api.h  ifc_mst.go  ifc_style.go  ifc_test.go  location.cc  location.hh  mesh.cc  mesh.go  mesh.hh  (+42 more)
ifc/: ifc.cc  ifc.go  ifc.hh  ifc_c_api.cc  ifc_c_api.h  ifc_test.go
include/oce/: IGESDefs_AttributeDef.hxx  IGESDefs_AttributeTable.hxx  IGESDefs_GenericData.hxx  PDataStd_NamedData.hxx  StepData_PDescr.hxx  TDataStd_NamedData.hxx  TDataStd_NamedData.lxx  oce-config.h  oce_build_config.defs
lib/darwin/: libFWOSPlugin.11.0.0.dylib  libFWOSPlugin.11.dylib  libFWOSPlugin.dylib  libPTKernel.11.0.0.dylib  libPTKernel.11.dylib  libPTKernel.dylib  libTKBO.11.0.0.dylib  libTKBO.11.dylib  libTKBO.dylib  libTKBRep.11.0.0.dylib  libTKBRep.11.dylib  libTKBRep.dylib  libTKBin.11.0.0.dylib  libTKBin.11.dylib  libTKBin.dylib  libTKBinL.11.0.0.dylib  libTKBinL.11.dylib  libTKBinL.dylib  libTKBinTObj.11.0.0.dylib  libTKBinTObj.11.dylib  libTKBinTObj.dylib  libTKBinXCAF.11.0.0.dylib  libTKBinXCAF.11.dylib  libTKBinXCAF.dylib  libTKBool.11.0.0.dylib  libTKBool.11.dylib  libTKBool.dylib  libTKCAF.11.0.0.dylib  libTKCAF.11.dylib  libTKCAF.dylib  libTKCDF.11.0.0.dylib  libTKCDF.11.dylib  libTKCDF.dylib  libTKFeat.11.0.0.dylib  libTKFeat.11.dylib  libTKFeat.dylib  libTKFillet.11.0.0.dylib  libTKFillet.11.dylib  libTKFillet.dylib  libTKG2d.11.0.0.dylib  (+116 more)
lib/linux/: libFWOSPlugin.so.11  libFWOSPlugin.so.11.0.0  libPTKernel.so.11  libPTKernel.so.11.0.0  libTKBO.so.11  libTKBO.so.11.0.0  libTKBRep.so.11  libTKBRep.so.11.0.0  libTKBin.so.11  libTKBin.so.11.0.0  libTKBinL.so.11  libTKBinL.so.11.0.0  libTKBinTObj.so.11  libTKBinTObj.so.11.0.0  libTKBinXCAF.so.11  libTKBinXCAF.so.11.0.0  libTKBool.so.11  libTKBool.so.11.0.0  libTKCAF.so.11  libTKCAF.so.11.0.0  libTKCDF.so.11  libTKCDF.so.11.0.0  libTKFeat.so.11  libTKFeat.so.11.0.0  libTKFillet.so.11  libTKFillet.so.11.0.0  libTKG2d.so.11  libTKG2d.so.11.0.0  libTKG3d.so.11  libTKG3d.so.11.0.0  libTKGeomAlgo.so.11  libTKGeomBase.so.11  libTKHLR.so.11  libTKHLR.so.11.0.0  libTKIGES.so.11  libTKLCAF.so.11  libTKLCAF.so.11.0.0  libTKMath.so.11  libTKMath.so.11.0.0  libTKMesh.so.11  (+61 more)
src/: CMakeLists.txt  aci_table.hh  assembly.cc  assembly.hh  assembly_c_api.cc  assembly_c_api.h  base.hh  bbox.cc  bbox.hh  bnd_utils.cc  bnd_utils.hh  bool_type.hh  bound_pipe.hh  bounding_pipe.cc  bounding_pipe.hh  bounding_pipe_test.cc  brep_mesh_parameters.hh  brep_utils.cc  brep_utils.hh  bug.cpp  catenary.hh  comp_solid.cc  comp_solid.hh  compound.cc  compound.hh  context.cc  context.hh  convex_hull.cc  convex_hull.hh  curve_utils.cc  curve_utils.hh  direction.hh  dxf.cc  dxf.hh  dxf_c_api.cc  dxf_c_api.h  dxf_shape.cc  dxf_shape.hh  edge.cc  edge.hh  (+90 more)
tests/: buildingElementProxy.ifc  head.txt
